<resources>
    <string name="app_name">Lost &amp; Found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lost &amp; Found</string>
    <string name="nav_header_subtitle">where good samaritans unite</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_content_description"><![CDATA[Lost & Found logo]]></string>
    <string name="login_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="sign_out">Sign Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_lost_item">Add Lost Item</string>
    <string name="input_name_hint">What did you lose?</string>
    <string name="add_item_button">Upload</string>
    <string name="all_items">All Items</string>
    <string name="search_hint">Enter your search here</string>
    <string name="mark_found_button_text">mark found</string>
    <string name="notify_owner_item_found_button">notify owner that i found it</string>
    <string name="enter_message_hint">Enter your message here</string>
    <string name="send_message_button">send message</string>
    <string name="my_chats">My Chats</string>
</resources>