<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginActivity">

    <EditText
        android:id="@+id/editTextInputUserName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/prompt_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"

        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInputUserName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="onClickSignIn"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textColorHint="@color/my_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="350dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="onClickSignUp"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textColorHint="@color/my_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="400dp"
        android:layout_height="236dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/puzzle_logo_transparent_bg" />
</androidx.constraintlayout.widget.ConstraintLayout>